--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HosseinOutward</title>
     <div class="box"></div>
-    <div class="box" style="--c:green;--b:1px;--o1:20px;"></div>
-    <div class="box" style="--c:blue;--b:4px;--o1:40px;--o2:20px;"></div>
-    <div class="box" style="--c:#000;--b:1px;--o1:10px;--o2:0;"></div>
 </head>
 <body>
 
