--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HosseinOutward</title>
-    <div class="box"></div>
+    <div class="box">work in progress</div>
 </head>
 <body>
 
