--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </body>
     
 <script>
-    window.location.href = "http://www.w3schools.com";
+    window.location.href = "https://github.com/HosseinOutward";
 </script>
     
 </html>
